# Loan_Prediction_Model

./: .firebaserc  DEPLOYMENT.md  README.md  app.py  firebase.json  load_model.pkl  package-lock.json  package.json  vercel.json
.firebase/: hosting.bG9hbl9hcHBsaWNhdGlvbl9mcm9udGVuZFxkaXN0.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
loan_application_backend/: .env copy  .gitignore  create-test-employees.js  importCsvToMongo.js  package-lock.json  package.json  server.js  vercel.json
loan_application_backend/auth/: authenticateToken.js
loan_application_backend/controller/: employeeLoginController.js  panCardController.js  userDataController.js  userLoginController.js
loan_application_backend/models/: UserLoginModel.js  employeeLoginModel.js  pancardData.js  userDataModels.js  userDataSchema.js  userModels.js  userSchema.js
loan_application_frontend/: .firebaserc  .gitignore  index.html  package-lock.json  package.json  test-api.html  vite.config.js
loan_application_frontend/.firebase/: hosting.ZGlzdA.cache
loan_application_frontend/components/: AuthLogin.jsx  EmployeeDashboard.jsx  HowItWorks.jsx  LoanPredictionForm.jsx  about.jsx  contact.jsx  faq.jsx  home.jsx  prediction copy.jsx  prediction.jsx  result.jsx  working.jsx
loan_application_frontend/src/: App.jsx  main.jsx
loan_application_frontend/src/components/: EmployeeRedirect.jsx
loan_venv/: pyvenv.cfg
loan_venv/Scripts/: activate  activate.bat
model/: .gitignore  app.py  gunicorn_config.py  load_model.pkl  pyproject.toml  requirements.txt
(+1 files in other folders)
