[tool.poetry]
name = "loan-prediction"
version = "0.1.0"
description = "Loan Prediction Model API"
authors = ["Saksham Jaiswal"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.2"
gunicorn = "20.1.0"
numpy = "1.23.5"
pandas = "1.5.2"
scikit-learn = "1.6.1"
flask-cors = "3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
